# AudioKnife

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  app_gui.py  install.sh  install_pro.sh  requirements.txt  requirements_pro.txt  upload_to_github.command
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
audioknife-tauri/: .gitignore  README.md  build-release.sh  package-lock.json  package.json  run_gui.command  start-backend.sh
audioknife-tauri/python-backend/: requirements.txt  server.py
audioknife-tauri/python-backend/processors/: __init__.py  demucs_processor.py  resemble_processor.py  spleeter_processor.py
audioknife-tauri/src/: App.css  App.tsx
audioknife-tauri/src-tauri/: Cargo.toml  tauri.conf.json
audioknife-tauri/src-tauri/capabilities/: default.json
audioknife-tauri/src-tauri/src/: commands.rs  lib.rs  main.rs
audioknife-tauri/src-tauri/src/ai_bridge/: mod.rs
audioknife-tauri/src-tauri/src/audio/: format_converter.rs  mod.rs  silence_padding.rs
docs/: ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_PRO.md  CHANGELOG_PRO_FIX.md  QUICKSTART.md  QUICKSTART_PRO.md  README_LAUNCHER.md  README_PRO.md  USAGE.md
example/: README.md
launchers/: audio_cleaner.command  audio_cleaner_gui.command  audio_cleaner_pro.command  run-audioCleaner.command
scripts/: run_audiosep.py  run_clearSound.py  run_mossformer2.py  run_mp_senet.py  run_resemble_enhance.py  run_sepformer.py
