[package]
name = "audioknife"
version = "0.1.0"
description = "AudioKnife - Apple Silicon Optimized Audio Processor"
authors = ["AudioKnife Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "audioknife_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio processing
hound = "3.5"           # WAV file reading/writing
symphonia = { version = "0.5", features = ["all"] }  # Multi-format audio decoding
rayon = "1.10"          # Parallel processing

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# File system operations
walkdir = "2"
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS specific optimizations
core-foundation = "0.10"

